--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ requires-python = ">=3.12"
 dependencies = [
     "jupyter>=1.1.1",
     "mlx>=0.25.2",
+    "toolz>=1.0.0",
 ]
 
 [project.scripts]
